--- a/src/global_components/NavigationalBar/styles/SideBar.scss
+++ b/src/global_components/NavigationalBar/styles/SideBar.scss
@@ -5,4 +5,41 @@
     top: 0;
     left: 0;
     z-index: 500;
+    background-color: rgb(250, 250, 250);
+    animation: fade-out 0.5s ease forwards;
+
+    @keyframes fade-out {
+        from {
+            opacity: 1;
+        }
+        to {
+            opacity: 0;
+            visibility: hidden;
+        }
+    }
+
+    .list-links {
+        text-align: center;
+        color: #333333;
+        font-weight: bolder;
+        font-size: 5em;
+
+        li {
+            cursor: pointer;
+        }
+    }
+}
+
+.active-sidebar {
+    animation: fade-in 0.5s ease forwards;
+    visibility: visible;
+    @keyframes fade-in {
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+            visibility: visible;
+        }
+    }
 }
