--- a/src/global_components/NavigationalBar/styles/NavigationalBar.scss
+++ b/src/global_components/NavigationalBar/styles/NavigationalBar.scss
@@ -25,6 +25,11 @@
         font-family: dream_only;
         filter: blur(0.2px);
         font-size: 0.9em;
+        font-weight: bold;
         color: #222222;
+        transition: transform 0.3s ease;
+    }
+    .header-text:hover {
+        transform: scale(1.1);
     }
 }
