--- a/src/global_styles/index.scss
+++ b/src/global_styles/index.scss
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: dream_only;
+    src: url("../assets/dream_only.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: grape_nuts;
+    src: url("../assets/grape_nuts.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: oswald;
+    src: url("../assets/oswald.ttf") format("truetype");
+}
