--- a/src/pages/Home/styles/homepage.scss
+++ b/src/pages/Home/styles/homepage.scss
@@ -1,13 +1,3 @@
-@font-face {
-    font-family: dream_only;
-    src: url("../../../assets/dream_only.ttf");
-}
-
-@font-face {
-    font-family: grape_nuts;
-    src: url("../../../assets/grape_nuts.ttf");
-}
-
 .homepage {
     width: 100%;
     height: 100vh;
@@ -16,6 +6,16 @@
     left: 0;
     background-color: rgb(255, 209, 220);
     padding: 10em 0 5em 10em;
+    animation: fade-in 0.5s ease forwards;
+
+    @keyframes fade-in {
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+        }
+    }
 
     .hero {
         margin-top: 12em;
