--- a/src/global_styles/index.scss
+++ b/src/global_styles/index.scss
@@ -4,7 +4,7 @@
 
 @font-face {
     font-family: dream_only;
-    src: url("../assets/dream_only.ttf") format("truetype");
+    src: url("../assets/dream_only.woff2") format("opentype");
 }
 
 @font-face {
