[Homepage] Fixed UI for Hero section

--- a/src/global_styles/index.scss
+++ b/src/global_styles/index.scss
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600;700&display=swap');
 @font-face {
     font-family: dream_only;
     src: url("../assets/dream_only.woff2") format("opentype");
