--- a/src/pages/Home/styles/homepage.scss
+++ b/src/pages/Home/styles/homepage.scss
@@ -1,6 +1,6 @@
 .homepage {
     width: 100%;
-    height: 100vh;
+    min-height: 300vh;
     position: absolute;
     top: 0;
     left: 0;
@@ -25,7 +25,7 @@
         }
 
         p {
-            margin-top: 3em;
+            margin-top: 2em;
             font-family: grape_nuts;
             color: #222222;
             font-weight: bolder;
@@ -35,6 +35,51 @@
             animation-delay: 2s;
         }
 
+        .cta-btns {
+            margin-top: 10vh;
+            display: flex;
+            gap: 10em;
+            font-size: 1.1em;
+            img {
+                width: 20px;
+                opacity: 0;
+                transition: all 0.2s ease;
+            }
 
+            button:hover {
+                img {
+                    opacity: 1;
+                }
+            }
+
+            button {
+                display: flex;
+                img {
+                    padding-top: 45px;
+                }
+            }
+
+            .navigate-to-blog {
+                transform: rotate(180deg);
+                padding-bottom: 38px;
+            }
+        }
+
+        .cta-down {
+            position: relative;
+            bottom: -160px;
+            left: 0;
+            transition: all 0.1s ease;
+
+            &:hover {
+                bottom: -155px;
+            }
+
+            img {
+                width: 60px;
+                transform: rotate(180deg);
+                margin-left: 50px;
+            }
+        }
     }
 }
