--- a/src/global_styles/index.scss
+++ b/src/global_styles/index.scss
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600;700&display=swap");
 @font-face {
     font-family: dream_only;
     src: url("../assets/dream_only.woff2") format("opentype");
@@ -20,6 +20,20 @@
 
 body {
     background-color: #eeeeee;
+    overflow-x: hidden;
+}
+
+*::-webkit-scrollbar {
+    width: 0.4em;
+}
+
+*::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+*::-webkit-scrollbar-thumb {
+    background: linear-gradient(180deg, rgba(234, 249, 142, 1) 0%, rgba(251, 116, 206, 1) 55%);
+    border-radius: 0.5em;
 }
 
 @keyframes fade-in {
