--- a/src/global_components/CustomCursor/style.scss
+++ b/src/global_components/CustomCursor/style.scss
@@ -1,7 +1,5 @@
 .main-cursor,
 .secondary-cursor {
-  z-index: 10000;
-
   pointer-events: none;
   // overflow: hidden;
   transform: translate3d(0, 0, 0);
@@ -12,10 +10,11 @@
   transition: opacity 1s cubic-bezier(0.77, 0, 0.175, 1);
   animation: fadeIn 1s cubic-bezier(0.77, 0, 0.175, 1) 0s forwards;
   mix-blend-mode: difference;
+  z-index: 10000;
 
   .main-cursor-background {
-    width: 30px;
-    height: 30px;
+    width: 10px;
+    height: 10px;
     background: white;
     border-radius: 50%;
   }
@@ -26,11 +25,15 @@
   height: 60px;
 
   .cursor-background {
-    width: 100%;
-    height: 100%;
+    width: 500px;
+    height: 500px;
+    top: -210px;
+    left: -220px;
     border-radius: 50%;
     border: 1px solid black;
     position: relative;
+    filter: blur(300px);
+    background: linear-gradient(180deg, rgb(220, 253, 2) 0%, rgb(250, 48, 183) 48%, rgb(248, 244, 8) 100%);
     &:after,
     &:before {
       content: "";
